fixed layout of view page

--- a/src/pages/view/view.css
+++ b/src/pages/view/view.css
@@ -6,7 +6,6 @@
 
 .view-page>.main {
     display: flex;
-    justify-content: space-around;
     flex-wrap: wrap;
     align-items: center;
 }
